// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Large Secondary Button matches the snapshot 1`] = `
<button
  className="lcLtuC"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the beacon button matches the snapshot 1`] = `
<button
  aria-label=""
  className="citGaT"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the button handling an onclick event 1`] = `
<button
  className="cHnBIQ"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the button handling an onclick event 2`] = `
<button
  className="cHnBIQ"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the button matches the snapshot 1`] = `
<button
  className="cHnBIQ"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the button with button type given matches the snapshot 1`] = `
<button
  className="cHnBIQ"
  type="button"
>
  ButtonValue
</button>
`;
